--- a/engineeringhubbackend/requirements.txt
+++ b/engineeringhubbackend/requirements.txt
@@ -7,6 +7,8 @@ chardet==4.0.0
 distlib==0.3.1
 Django==3.2.4
 django-cors-headers==3.7.0
+django-filter==2.4.0
+djangorestframework==3.12.4
 docutils==0.16
 filelock==3.0.12
 idna==2.10
@@ -14,6 +16,7 @@ imagesize==1.2.0
 importlib-metadata==3.7.2
 importlib-resources==5.1.2
 Jinja2==2.11.3
+Markdown==3.3.4
 MarkupSafe==1.1.1
 packaging==20.9
 Pygments==2.8.1
