--- a/engineeringhubfrontend/package.json
+++ b/engineeringhubfrontend/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "@ngneat/tailwind": "^7.0.3",
+    "faker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
@@ -31,6 +32,7 @@
     "@tailwindcss/forms": "0.3.3",
     "@tailwindcss/line-clamp": "0.2.1",
     "@tailwindcss/typography": "0.4.1",
+    "@types/faker": "^5.5.7",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
