--- a/engineeringhubfrontend/package.json
+++ b/engineeringhubfrontend/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~12.0.2",
     "@ngneat/tailwind": "^7.0.3",
     "faker": "^5.5.3",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
